# ZenSync

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: release-plz.yml
src/: cli.rs  files.rs  git.rs  init.rs  lifecycle.rs  main.rs  profile.rs  pull.rs  push.rs  sanitize.rs  state.rs  sync.rs
