[package]
name = "zensync"
version = "0.0.1"
edition = "2021"
description = "Sync Zen Browser configurations across machines via Git"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
sysinfo = "0.32"
directories = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
